# P2VG

./: .gitignore  README.md  UDML.tex  Unbiased Dynamic Multimodal Fusion.md  compute_mean_scores.py  environment.yaml  eval_results_mean.csv  nlg_results.txt  paper_methods.tex  pipeline_diagram.html  push_hf.py  pyproject.toml  run_remerge_and_eval.sh  scratch_check_hf.py  test_load.py  wavelet_fusion_tool.py
.agent/rules/: base.md
M3D/: custom_train.py  demo_csv.py  eval_caption_metrics.py  merge_lora_weights_and_save_hf_model.py
S1_composite_grok/fold_1_image/: test.csv  train.csv  val.csv
S1_composite_grok/fold_2_image/: test.csv  train.csv
S1_composite_grok/fold_3_image/: test.csv  train.csv
S1_composite_grok/fold_4_image/: test.csv  train.csv  val.csv
S1_composite_grok/fold_5_image/: test.csv  train.csv
configs/: ds_config_zero2.json  eval_lora.sh  finetune_lora.sh
dataset_ttd_256/report/: missax2.csv  test.csv  train.csv  val.csv
docs/: UDML.tex  pka_resize_explanation.tex  pka_resize_theory.tex
outputs_spider_noaxial_fold3/fold3_spider_noaxial_stage1/: best_eval.txt  (+1 more)
scripts/: demo_csv.py  eval_captions.py  evaluate.sh  merge_lora.py  normalize_monai_256.py  resample_spider.py  setup.sh  train.py  train.sh
src/: ce_vocab_analysis.py  custom_train.py  demo_csv.py  eval_caption_metrics.py  eval_lora.sh  finetune_lora.sh  finetune_lora_ttd_256.sh  finetune_lora_ttd_256_continue.sh  lamed_trainer.py  merge_lora_weights_and_save_hf_model.py  multi_dataset.py  prepare_all_pka.py  prepare_pka_sample.py  tokenizer_overview.py
weights/: README.md
(+26 files in other folders)
