[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "p2vg"
version = "0.1.0"
description = "P2VG: Spine MRI captioning with UDML dynamic multimodal fusion"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.47",
    "peft",
    "deepspeed",
    "safetensors",
    "monai",
    "nibabel",
    "pandas",
    "numpy",
    "tqdm",
    "loguru",
    "evaluate",
    "bert-score",
    "rouge-score",
    "nltk",
    "requests",
    "huggingface-hub",
]

[tool.hatch.build.targets.wheel]
packages = ["src/p2vg"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src/p2vg", "scripts"]
